<resources>
    <string name="a11y_keep_suggestion_fmt">Keep suggestion \"%s\"</string>
    <string name="a11y_keep_suggestion_picked">Suggestion was kept.</string>
    <string name="a11y_remove_suggestion_fmt">Remove suggestion \"%s\"</string>
    <string name="a11y_remove_suggestion_picked">Suggestion was removed.</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_key_popup_emoji_data">smiley</string>
    <string name="action_key_popup_emoticon_data">emoticon</string>
    <string name="android_account_authenticating">Authenticating, please wait…</string>
    <string name="android_account_failed">Authentication failed. Please try again.</string>
    <string name="android_account_title">Account authentication</string>
    <string name="assets_theme_no_background">assets:theme_package_metadata_no_background.binarypb</string>
    <string name="button_default">Default</string>
    <string name="cangjie_ime_label">Cangjie keyboard</string>
    <string name="cangjie_mode_express">Easy</string>
    <string name="cangjie_mode_standard">Standard</string>
    <string name="cangjie_version_3">Version 3</string>
    <string name="cangjie_version_5">Version 5</string>
    <string name="capslock_enabled_mode_content_desc">Caps lock enabled</string>
    <string name="care_of_key_content_desc">Care of</string>
    <string name="check_mark_key_content_desc">Check mark</string>
    <string name="chinese_dashboard_key_content_desc">Select Chinese keyboard</string>
    <string name="chinese_keyboard_key_content_desc">Chinese keyboard</string>
    <string name="clear_all_key_content_desc">Clear all</string>
    <string name="close_access_points_menu_content_desc">Close features menu</string>
    <string name="close_activities_or_extensions">Close %s</string>
    <string name="close_popup_content_desc">Alternatives are dismissed</string>
    <string name="colon_key_content_desc">Colon</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="config_metadata_uri_alpha">https://www.gstatic.com/android/keyboard/dictionarypack/Celesta-normal-alpha/metadata.json</string>
    <string name="config_metadata_uri_beta">https://www.gstatic.com/android/keyboard/dictionarypack/Celesta-normal-beta/metadata.json</string>
    <string name="config_metadata_uri_early">https://www.gstatic.com/android/keyboard/dictionarypack/Celesta-normal-early/metadata.json</string>
    <string name="config_metadata_uri_prod">https://www.gstatic.com/android/keyboard/dictionarypack/Celesta-normal/metadata.json</string>
    <string name="confirmation_number_field_content_desc">Enter confirmation number field</string>
    <string name="dashboard_ime_label">Keyboard selection UI</string>
    <string name="date_time_ime_label">Date time keyboard</string>
    <string name="default_country_locales_en_au">en_GB</string>
    <string name="default_country_locales_en_in">en_GB</string>
    <string name="default_country_locales_en_ke">en_GB</string>
    <string name="default_country_locales_en_ng">en_GB</string>
    <string name="default_country_locales_en_nz">en_AU,en_GB</string>
    <string name="default_country_locales_en_za">en_GB</string>
    <string name="default_country_locales_es_ar">es_419,es_US</string>
    <string name="default_country_locales_es_mx">es_419,es_US</string>
    <string name="default_country_locales_hi_xa">NONE</string>
    <string name="default_country_locales_pt_002">pt_PT</string>
    <string name="default_country_locales_sr_xa">NONE</string>
    <string name="default_country_locales_sr_zz">NONE</string>
    <string name="default_language_locale_de">de_DE</string>
    <string name="default_language_locale_en">en_US</string>
    <string name="default_language_locale_es">es_US</string>
    <string name="default_language_locale_fr">fr_FR</string>
    <string name="default_language_locale_it">it_IT</string>
    <string name="default_language_locale_ru">ru_RU</string>
    <string name="delete_key_content_desc">Delete</string>
    <string name="desc_switch_to_fullscreen_handwriting">Switch to fullscreen handwriting</string>
    <string name="desc_switch_to_halfscreen_handwriting">Switch to half screen handwriting</string>
    <string name="digit_keyboard_key_content_desc">Digit keyboard</string>
    <string name="digit_keyboard_label">Digit keyboard</string>
    <string name="done_key_content_desc">Done</string>
    <string name="dot_china_key_content_desc">Dot 中国</string>
    <string name="dot_cn_key_content_desc">Dot cn</string>
    <string name="dot_com_key_content_desc">Dot com</string>
    <string name="dot_content_desc">Dot</string>
    <string name="dot_edu_key_content_desc">Dot edu</string>
    <string name="dot_gov_key_content_desc">Dot gov</string>
    <string name="dot_hk_key_content_desc">Dot hk</string>
    <string name="dot_net_key_content_desc">Dot net</string>
    <string name="dot_org_key_content_desc">Dot org</string>
    <string name="dot_tw_key_content_desc">Dot tw</string>
    <string name="double_left_book_title_key_content_desc">Double left book title mark</string>
    <string name="double_right_book_title_key_content_desc">Double right book title mark</string>
    <string name="down_arrow_key_content_desc">Down arrow</string>
    <string name="duration_milliseconds">%1$s ms</string>
    <string name="edit_keyboard_desc">Change keyboard size or position</string>
    <string name="ellipsis_key_content_desc">Ellipsis</string>
    <string name="emoji_keyboard_key_content_desc">Emoji keyboard</string>
    <string name="emoticon_category_displeasure_content_desc">Displeasure</string>
    <string name="emoticon_category_sadness_content_desc">Sadness</string>
    <string name="emoticon_category_smile_content_desc">Smile</string>
    <string name="emoticon_category_surprise_content_desc">Surprise</string>
    <string name="emoticon_category_sweat_content_desc">Sweat</string>
    <string name="emoticon_keyboard_key_content_desc">Emoticon keyboard</string>
    <string name="emoticon_keyboard_label">Emoticon keyboard</string>
    <string name="emoticon_keyboard_persist_states_pref_key">emoticon_keyboard_subcategory_selected</string>
    <string name="english_dashboard_key_content_desc">Select English keyboard</string>
    <string name="english_hard_12key_ime_label">English twelve key keyboard</string>
    <string name="english_keyboard_key_content_desc">English keyboard</string>
    <string name="english_qwerty_ime_label">English keyboard</string>
    <string name="enter_key_content_desc">Enter</string>
    <string name="equals_key_content_desc">Equals</string>
    <string name="exclamation_key_content_desc">Exclamation</string>
    <string name="exit_editing_keyboard_content_desc">Finish changing keyboard size and position</string>
    <string name="exiting_keyboard_editing_view">Exiting keyboard editing view</string>
    <string name="exiting_one_handed_keyboard">Exiting one handed keyboard</string>
    <string name="expand_access_points_hint_close">GOT IT</string>
    <string name="expand_access_points_hint_title">Drag to customize</string>
    <string name="expand_keyboard_button_left_bottom_content_desc">Resize keyboard on the bottom left corner</string>
    <string name="expand_keyboard_button_left_top_content_desc">Resize keyboard on the top left corner</string>
    <string name="expand_keyboard_button_right_bottom_content_desc">Resize keyboard on the bottom right corner</string>
    <string name="expand_keyboard_button_right_top_content_desc">Resize keyboard on the top right corner</string>
    <string name="expand_keyboard_content_desc">Exit one handed mode</string>
    <string name="feature_page_gesture_description">Typing is as easy as swiping your finger across the keyboard</string>
    <string name="feature_page_gesture_title">Glide typing</string>
    <string name="feature_page_sliding_description">Swipe down to input digits, English letters or punctuations</string>
    <string name="feature_page_sliding_title">Sliding input</string>
    <string name="feature_page_theme_selector_launcher_content_desc">See more themes</string>
    <string name="feature_page_theme_title">Choose your theme</string>
    <string name="feature_page_theme_toggle_border">Show key borders</string>
    <string name="first_run_enable_description">Select &lt;b>%s&lt;/b> in your Language &amp;amp; input settings</string>
    <string name="first_run_enable_hint">ENABLE IN SETTINGS</string>
    <string name="first_run_notification_channel_id">com.google.android.apps.inputmethod.libs.framework.firstrun</string>
    <string name="first_run_notification_channel_name">Setup Wizard</string>
    <string name="first_run_notification_text">Finish setting up the keyboard</string>
    <string name="first_run_page_permissions_description">For better typing suggestions, please grant following permissions to &lt;b>%1$s&lt;/b>:</string>
    <string name="first_run_page_user_metrics">Send anonymous usage statistics to help improve &lt;b>%s&lt;/b></string>
    <string name="first_run_select_input_method_description">Select &lt;b>%s&lt;/b> as your default input method</string>
    <string name="first_run_select_input_method_hint">SELECT INPUT METHOD</string>
    <string name="first_run_set_permissions_hint">SET PERMISSIONS</string>
    <string name="first_run_setup_done_hint">Done!</string>
    <string name="full_width_colon_key_content_desc">Full width colon</string>
    <string name="full_width_comma_key_content_desc">Full width comma</string>
    <string name="nonprime_recent_content_desc">Recents</string>
</resources>