<?xml version="1.0" encoding="utf-8"?>
<framework>
    <include href="@xml/softkeys_non_prime_sub_category_templates" />
    <softkeys>
        <softkey_list template_id="@id/softkey_template_sub_category_active">
            <softkey id="@id/softkey_non_prime_emoticon_sub_category_1_active" param_icon="@attr/IconRecent" desc="@string/nonprime_recent_content_desc" />
        </softkey_list>
        <softkey_list template_id="@id/softkey_template_sub_category_text_active">
            <softkey id="@id/softkey_non_prime_emoticon_sub_category_2_active" param_text="(>∇&lt;)" desc="@string/emoticon_category_smile_content_desc" />
            <softkey id="@id/softkey_non_prime_emoticon_sub_category_3_active" param_text="(#`Д´)" desc="@string/emoticon_category_sweat_content_desc" />
            <softkey id="@id/softkey_non_prime_emoticon_sub_category_4_active" param_text="(TдT)" desc="@string/emoticon_category_surprise_content_desc" />
            <softkey id="@id/softkey_non_prime_emoticon_sub_category_5_active" param_text="(¯―¯٥)" desc="@string/emoticon_category_sadness_content_desc" />
            <softkey id="@id/softkey_non_prime_emoticon_sub_category_6_active" param_text="(☉д⊙)" desc="@string/emoticon_category_displeasure_content_desc" />
        </softkey_list>
        <softkey_list template_id="@id/softkey_template_sub_category_deactive">
            <softkey id="@id/softkey_non_prime_emoticon_sub_category_1_deactive" param_icon="@attr/IconRecent" param_data="SUB_CATEGORY_1" desc="@string/nonprime_recent_content_desc" />
        </softkey_list>
        <softkey_list template_id="@id/softkey_template_sub_category_text_deactive">
            <softkey id="@id/softkey_non_prime_emoticon_sub_category_2_deactive" param_text="(>∇&lt;)" param_data="SUB_CATEGORY_2" desc="@string/emoticon_category_smile_content_desc" />
            <softkey id="@id/softkey_non_prime_emoticon_sub_category_3_deactive" param_text="(#`Д´)" param_data="SUB_CATEGORY_3" desc="@string/emoticon_category_sweat_content_desc" />
            <softkey id="@id/softkey_non_prime_emoticon_sub_category_4_deactive" param_text="(TдT)" param_data="SUB_CATEGORY_4" desc="@string/emoticon_category_surprise_content_desc" />
            <softkey id="@id/softkey_non_prime_emoticon_sub_category_5_deactive" param_text="(¯―¯٥)" param_data="SUB_CATEGORY_5" desc="@string/emoticon_category_sadness_content_desc" />
            <softkey id="@id/softkey_non_prime_emoticon_sub_category_6_deactive" param_text="(☉д⊙)" param_data="SUB_CATEGORY_6" desc="@string/emoticon_category_displeasure_content_desc" />
        </softkey_list>
    </softkeys>
</framework>